...
        iconTextId = "추천"
    ),
    ADD(
        route = AddRecordRoute,
        selectedIcon = Icons.Rounded.AddCircle,
        unselectedIcon = Icons.Outlined.AddCircleOutline,
        iconTextId = "기록"
    ),
    HISTORY(
        route = HistoryRoute,
        selectedIcon = Icons.Rounded.History,
        unselectedIcon = Icons.Outlined.HistoryOutlined,
        iconTextId = "통계"
...
